# Tapiir

./: Makefile.in  README.md  aclocal.m4  configure  configure.in
debian/: Makefile.am  Makefile.in  changelog  control  copyright  docs  rules  tapiir.menu
doc/: Makefile.am  Makefile.in  html2textrc  tapiir.1  tapiir.html  tapiir.txt
doc/examples/: 00-clear.mtd  01-simple.mtd  02-simple-feedback.mtd  03-pingpong.mtd  04-pingpong-cross.mtd  05-reverb-1.mtd  06-reverb-2.mtd  07-FIR.mtd  08-IIR.mtd  09-filter.mtd  10-karplusstrong.mtd  11-syncdelay-1.mtd  12-syncdelay-2.mtd  13-pattern.mtd  14-its-gonna-rain.mtd  15-xloops.mtd  Makefile.am  Makefile.in
doc/images/: Makefile.am  Makefile.in
src/: FileIO.cxx  FileIO.hxx  GUI.cxx  GUI.hxx  IRWindow.cxx  IRWindow.hxx  Layout.cxx  Layout.hxx  LayoutBig.cxx  LayoutDefines.hxx  LayoutSet.cxx  LayoutSmall.cxx  MTD.hxx  MTDBase.hxx  MTDConvert.cxx  MTDStore.hxx  MTDdecl.hxx  Makefile.am  Makefile.in  Mixer.cxx  Mixer.hxx  Tap.cxx  Tap.hxx  TapSliderGroup.hxx  alsaio.cxx  config.h.in  globals.hxx  jackio.cxx  main.cxx  main_alsa.cxx  main_jack.cxx  tapiir_diagram.cxx  tapiir_diagram.hxx  tapiir_image.cxx
